--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: "Scav's Purchase List"
+title: "Slink's Purchase List"
 favicon: assets/img/favicon.png
 description: >-
   An expanded item list for TwitchToolkit that supports ToolkitUtils' shop.
 
 email: ''
 baseurl: '/itemlist' # the subpath of your site, e.g. /blog
-url: 'twith.tv/scavenging_mechanic' # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 'ScavMechanic'
-github_username: 'scavmech'
+url: 'http://twith.tv/slink101' # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: ''
+github_username: 'Slink101'
 
 remote_theme: Sylhare/Type-on-Strap
 
